--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header>
         <div class="header-background"></div>
         <nav>
-            <ul>
+            <button class="menu-toggle" aria-label="Toggle menu">Menu</button>
+            <ul class="nav-menu">
                 <li><a href="#accueil" class="nav-button">Accueil</a></li>
                 <li><a href="#services" class="nav-button">Services</a></li>
                 <li><a href="#tarifs" class="nav-button">Tarifs</a></li>
@@ -36,47 +37,48 @@
         </div>
     </section>
 
-
-<!-- Section Services -->
-<section id="services">
-    <h2>Nos services</h2>
-    <div class="services-list">
-        <div class="service-item">
-            <h3>Nettoyage intérieur</h3>
-            <p>Un intérieur propre et désinfecté pour votre confort.</p>
+    <!-- Section Services -->
+    <section id="services">
+        <h2>Nos services</h2>
+        <div class="services-list">
+            <div class="service-item">
+                <h3>Nettoyage intérieur</h3>
+                <p>Un intérieur propre et désinfecté pour votre confort.</p>
+            </div>
+            <div class="service-item">
+                <h3>Nettoyage extérieur</h3>
+                <p>Votre voiture retrouve son éclat d'origine avec notre lavage extérieur complet.</p>
+            </div>
+            <div class="service-item">
+                <h3>Nettoyage complet</h3>
+                <p>Un service complet pour une voiture impeccable de l'intérieur à l'extérieur.</p>
+            </div>
         </div>
-        <div class="service-item">
-            <h3>Nettoyage extérieur</h3>
-            <p>Votre voiture retrouve son éclat d'origine avec notre lavage extérieur complet.</p>
-        </div>
-        <div class="service-item">
-            <h3>Nettoyage complet</h3>
-            <p>Un service complet pour une voiture impeccable de l'intérieur à l'extérieur.</p>
-        </div>
-    </div>
-</section>
+    </section>
 
     <!-- Section Tarifs -->
     <section id="tarifs">
         <h2>Nos tarifs</h2>
-        <table>
-            <tr>
-                <th>Service</th>
-                <th>Prix</th>
-            </tr>
-            <tr>
-                <td>Nettoyage intérieur</td>
-                <td>50€</td>
-            </tr>
-            <tr>
-                <td>Nettoyage extérieur</td>
-                <td>30€</td>
-            </tr>
-            <tr>
-                <td>Nettoyage complet</td>
-                <td>70€</td>
-            </tr>
-        </table>
+        <div class="table-responsive">
+            <table>
+                <tr>
+                    <th>Service</th>
+                    <th>Prix</th>
+                </tr>
+                <tr>
+                    <td>Nettoyage intérieur</td>
+                    <td>50€</td>
+                </tr>
+                <tr>
+                    <td>Nettoyage extérieur</td>
+                    <td>30€</td>
+                </tr>
+                <tr>
+                    <td>Nettoyage complet</td>
+                    <td>70€</td>
+                </tr>
+            </table>
+        </div>
     </section>
 
     <!-- Section À propos -->
@@ -85,35 +87,47 @@
         <p>Nous offrons des services de nettoyage personnalisés et de qualité pour les espaces résidentiels et professionnels. Notre priorité est de créer des environnements propres et sains en utilisant des produits écologiques. Flexibles, professionnels et respectueux de l'environnement, nous adaptons nos services à vos besoins pour garantir votre satisfaction.</p>
     </section>
 
-     <!-- Section Contact -->
-     <section id="contact">
+    <!-- Section Contact -->
+    <section id="contact">
         <h2>Contactez-nous</h2>
         <form id="contact-form">
-            <label for="name">Nom</label>
-            <input type="text" id="name" name="name" required>
+            <div class="form-group">
+                <label for="name">Nom</label>
+                <input type="text" id="name" name="name" required>
+            </div>
 
-            <label for="phone">Téléphone</label>
-            <input type="tel" id="phone" name="phone" required>
+            <div class="form-group">
+                <label for="phone">Téléphone</label>
+                <input type="tel" id="phone" name="phone" required>
+            </div>
 
-            <label for="address">Adresse</label>
-            <input type="text" id="address" name="address" required>
+            <div class="form-group">
+                <label for="address">Adresse</label>
+                <input type="text" id="address" name="address" required>
+            </div>
 
-            <label for="date">Date de réservation</label>
-            <input type="text" id="date" name="date" required>
+            <div class="form-group">
+                <label for="date">Date de réservation</label>
+                <input type="text" id="date" name="date" required>
+            </div>
 
-            <label for="time">Heure de réservation</label>
-            <select id="time" name="time" required></select>
+            <div class="form-group">
+                <label for="time">Heure de réservation</label>
+                <select id="time" name="time" required></select>
+            </div>
 
-            <label for="message-type">Type de service</label>
-            <select id="message-type" name="message-type" required>
-                <option value="">Choisissez une option</option>
-                <option value="nettoyage_interieur">Nettoyage intérieur</option>
-                <option value="nettoyage_exterieur">Nettoyage extérieur</option>
-                <option value="polissage_complet">Nettoyage complet</option>
-                <option value="autre">Autre</option>
-            </select>
+            <div class="form-group">
+                <label for="message-type">Type de service</label>
+                <select id="message-type" name="message-type" required>
+                    <option value="">Choisissez une option</option>
+                    <option value="nettoyage_interieur">Nettoyage intérieur</option>
+                    <option value="nettoyage_exterieur">Nettoyage extérieur</option>
+                    <option value="polissage_complet">Nettoyage complet</option>
+                    <option value="autre">Autre</option>
+                </select>
+            </div>
 
-            <div id="autre-message-container" style="display: none;">
+            <div id="autre-message-container" class="form-group" style="display: none;">
                 <label for="autre-message">Votre message</label>
                 <textarea id="autre-message" name="autre-message" rows="4"></textarea>
             </div>
